--- a/style/style.css
+++ b/style/style.css
@@ -1,3 +1,229 @@
 html{
-    background-color: #2c4d2d;
+    background-position: fixed;
+    background-repeat: no-repeat;
+    background-size: cover;
+    text-align: center;
+    color: white;
+    display:flex;
+    flex-wrap: nowrap;
+    flex-direction: column;
+    
+    
+}
+
+body{
+    
+    background: linear-gradient(90deg, #145404, #48d824);
+    
+}
+
+h1{
+    font-weight: bolder;
+    border-radius: 10px;
+    width: 550px;
+    margin: auto;
+    font-size: 100px;
+    text-shadow: 0 0 10px #AEFF54;
+    color: #AEFF54;
+    transition: all 0.3s ease-in-out;
+}
+
+.container1{
+    color: #21FF91;
+    text-shadow: 0 0 10px #21FF91;
+}
+
+
+.montserrat{
+  font-family: "Montserrat", sans-serif;
+  font-weight:500px;
+  font-style:normal;
+}
+
+h1:hover{
+    background-color: #AEFF54;
+    color: white;
+    text-shadow: 0 0 10px white;
+    transition: all 0.3s ease-in-out;
+}
+
+.poppins-thin {
+  font-family: "Poppins", sans-serif;
+  font-weight: 100;
+  font-style: normal;
+}
+
+.poppins-extralight {
+  font-family: "Poppins", sans-serif;
+  font-weight: 200;
+  font-style: normal;
+}
+
+.poppins-light {
+  font-family: "Poppins", sans-serif;
+  font-weight: 300;
+  font-style: normal;
+}
+
+.poppins-regular {
+  font-family: "Poppins", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.poppins-medium {
+  font-family: "Poppins", sans-serif;
+  font-weight: 500;
+  font-style: normal;
+}
+
+.poppins-semibold {
+  font-family: "Poppins", sans-serif;
+  font-weight: 600;
+  font-style: normal;
+}
+
+.poppins-bold {
+  font-family: "Poppins", sans-serif;
+  font-weight: 700;
+  font-style: normal;
+}
+
+.poppins-extrabold {
+  font-family: "Poppins", sans-serif;
+  font-weight: 800;
+  font-style: normal;
+}
+
+.poppins-black {
+  font-family: "Poppins", sans-serif;
+  font-weight: 900;
+  font-style: normal;
+}
+
+.poppins-thin-italic {
+  font-family: "Poppins", sans-serif;
+  font-weight: 100;
+  font-style: italic;
+}
+
+.poppins-extralight-italic {
+  font-family: "Poppins", sans-serif;
+  font-weight: 200;
+  font-style: italic;
+}
+
+.poppins-light-italic {
+  font-family: "Poppins", sans-serif;
+  font-weight: 300;
+  font-style: italic;
+}
+
+.poppins-regular-italic {
+  font-family: "Poppins", sans-serif;
+  font-weight: 400;
+  font-style: italic;
+}
+
+.poppins-medium-italic {
+  font-family: "Poppins", sans-serif;
+  font-weight: 500;
+  font-style: italic;
+}
+
+.poppins-semibold-italic {
+  font-family: "Poppins", sans-serif;
+  font-weight: 600;
+  font-style: italic;
+}
+
+.poppins-bold-italic {
+  font-family: "Poppins", sans-serif;
+  font-weight: 700;
+  font-style: italic;
+}
+
+.poppins-extrabold-italic {
+  font-family: "Poppins", sans-serif;
+  font-weight: 800;
+  font-style: italic;
+}
+
+.poppins-black-italic {
+  font-family: "Poppins", sans-serif;
+  font-weight: 900;
+  font-style: italic;
+}
+
+.zoneProposition{
+    margin-bottom: 50px;
+    font-size: 75px;
+    color: #8FFFF0;
+    text-shadow: 0 0 15px #8FFFF0;
+    height: auto;
+}
+
+.zoneProposition:hover{
+    color: white;
+    text-shadow: 0 0 15px white;
+    transition: all 0.3s ease-in-out;
+
+}
+
+input[type="text"]{
+    font-size: 30px;
+    border-radius: 10px;
+    width: 400px;
+    height: 55px;
+    text-align: center;
+    margin-bottom:  100px;
+    border: solid 2px #21FF91;
+    font-family: Poppins, sans-serif;
+
+}
+
+button{
+    font-size: 25px;
+    border-radius: 10px;
+    width: 150px;
+    height: 60px;
+    position:relative;
+    margin-top: 30px;
+    z-index: 10;
+    background-color: #21FF91;
+    text-align: center;
+    color: white;
+    border: solid #71F720;
+    box-shadow: 0 0 10px #21FF91;
+    transition: all 0.3s ease-in-out;
+    font-family: "Montserrat", sans-serif;
+    font-weight: bold;
+}
+
+.optionSource{
+    margin-top: 20px;
+    font-size: 20px;
+    color: #FFFFFF;
+
+}
+
+input[type="radio"]{
+    width: 20px;
+    height: 20px;
+    margin-left: 20px;
+    margin-right: 10px;
+    
+}
+
+button:hover
+{
+    background-color: white;
+    color: #21FF91;
+    box-shadow: 0 0 20px white;
+    transition: all 0.3s ease-in-out;
+}
+
+input[type="radio"]{
+    margin-bottom: 50px;
+    height: auto;
 }
